syntax = "proto3";

package v1;

option go_package = "/protocol/proto";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

service V1 {
    rpc GetCurrent(google.protobuf.Empty) returns (V1Status);
    rpc GetObjectsByHash(HashRequest) returns (Response);
    rpc GetHeaders(GetHeadersRequest) returns (Response);
    rpc Watch(google.protobuf.Empty) returns (stream V1Status);
}

message GetCurrentResponse {

}

message GetHeadersRequest {
    int64 number = 1;
    string hash = 2;
    int64 skip = 3;
    int64 amount = 4;
}

message HashRequest  {
    repeated string hash = 1;
    Type type = 2;

    enum Type {
        UNKNOWN = 0;
        BODIES = 1;
        RECEIPTS = 2;
    }
}

message NumberRequest {
    repeated int64 number = 1;
}

message Response {
    repeated Component objs = 1;

    message Component {
        google.protobuf.Any spec = 1;
    }
}

message V1Status {
    string difficulty = 1;
    string hash = 2;
    int64 number = 3;
}
